# voxelsprout

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  strategy_map.smap  vcpkg.json  voxel_skeleton
.claude/: settings.json
.claude/agents/: creative-director.md  game-developer.md  graphic-designer.md  jonas.md  performance-engineer.md  sdf-atlas-engineer.md  valerie.md
.github/workflows/: ci.yml  pages.yml
app/: app.cc  app.h  main.cc
assets/: water.dds
assets/advisors/: README.md  advisors.json
assets/great_people/: README.md  great_people.json
assets/icons/: civ_empires.json  compass_crown.json  unit_action_icons.json  unit_icons.json
assets/leaders/: civ_leaders.json
assets/scripts/: mv_deadtaxman.lua
assets/skybox/: irradiance.dds
assets/textures/: faithful_block_atlas.dds  faithful_plant_atlas.dds
assets/wonders/: ancient_wonders.json
cmake/: odai_ui-config.cmake.in
core/: camera.cc  camera.h  log.cc  log.h  math.h  noise_field.cc  noise_field.h  rng.h
docs/: EARLY_ACCESS_PLAN.md  FrameArena.md  GAME_API.md  UI_LIBRARY.md  _config.yml  bloom.md  devlog.md  faithful_attribution.md  index.md  minecraft_clone_modernization.md  shadow_occluder.md  spatial_partitioning_plan.md  voxel_gi.md
examples/ui_stress_test/: SPEC.md
examples/ui_stress_test/harness/: CMakeLists.txt  offscreen_capture.cc  offscreen_capture.h  vma_impl.cc
examples/ui_stress_test/smoke_test/: CMakeLists.txt  main.cc
examples/vulkan_ui_integration/: CMakeLists.txt  README.md  main.cc  vma_impl.cc
mods/base/: mod.json
mods/citybuilder/: mod.json
render/: renderer.cc  renderer.h  vma_usage.cc
scene/: scene.h
shaders/: cloud_density_bake.comp.slang  cloud_multiscatter.comp.slang  cloud_path_trace.comp.slang  cloud_sun_transmittance.comp.slang  tone_map.comp.slang
src/: AGENTS.md
src/app/: App.cpp  App.hpp  app.cc  app.h  main.cc  main.cpp  morrowind_actor_ai.cc  morrowind_actor_ai.h  morrowind_actor_system.cc  morrowind_actor_system.h  yield_style.h
src/audio/: audio.cc  audio.h  audio_backend.h  audio_types.h  miniaudio_backend.cc  miniaudio_impl.cc  null_backend.cc  sound_engine.cc  sound_engine.h
src/content/: content_database.cc  content_database.h  content_loader.cc  content_loader.h  content_paths.cc  content_paths.h  mod_loader.cc  mod_loader.h
src/core/: Grid3.hpp  Input.hpp  Log.cpp  Log.hpp  Time.hpp  grid3.h  input.h  log.cc  log.h  time.h  win_timer_resolution.h
src/engine/: game_app.cc  game_app.h
src/game/: advisor.cc  advisor.h  ai_units.cc  ai_units.h  buildable.cc  buildable.h  economy.cc  economy.h  game_sim.cc  game_sim.h  game_state.cc  game_state.h  great_people.cc  great_people.h  lua_script.cc  lua_script.h  mod_host.cc  mod_host.h  religion.cc  religion.h  strategy_hex_terrain.cc  strategy_hex_terrain.h  strategy_map.cc  strategy_map.h  strategy_map_io.cc  strategy_map_io.h  strategy_map_mesh.cc  strategy_map_mesh.h  turn_action.h  units.cc  units.h
src/import/: dds.cc  dds.h  gpu_scene.cc  gpu_scene.h  hex_terrain_data.h  imported_scene.cc  imported_scene.h  morrowind_nif.cc  morrowind_nif.h
src/math/: Math.hpp  math.h  noise.h
src/procgen/: building_generator.cc  building_generator.h  city_terrain.cc  city_terrain.h  civic_generator.cc  civic_generator.h  csg.cc  csg.h  mesh_emit.cc  mesh_emit.h  primitives.cc  primitives.h  props.cc  props.h  rng.h
src/render/: BufferHelpers.cpp  BufferHelpers.hpp  DescriptorManager.hpp  FrameArenaAlias.hpp  FrameGraph.cpp  PipelineManager.hpp  Renderer.Descriptors.cpp  Renderer.PassGi.cpp  Renderer.PassPipelines.cpp  Renderer.PostCompute.cpp  Renderer.ShadowCulling.cpp  Renderer.Shared.hpp  Renderer.SwapchainTargets.cpp  Renderer.UiPanels.cpp  Renderer.cpp  Renderer.hpp  VmaUsage.cpp  buffer_helpers.cc  buffer_helpers.h  chunk_upload.cc  chunk_upload.cpp  descriptors.cc  device.cc  device.cpp  dialogue_font_config.cc  dialogue_font_config.h  frame.cc  frame.cpp  frame_arena_alias.h  frame_graph.cc  frame_graph.h  frame_render.cc  frame_render.cpp  frame_run.cc  frame_run.cpp  frame_ui.cc  frame_ui.cpp  init.cc  init.cpp  init_resources.cc  (+13 more)
src/script/: lua_api.cc  lua_bindings.cc  lua_internal.h  lua_mod_host.cc  script_core.cc  script_core.h  script_engine.cc  script_engine.h
src/sim/: Belt.hpp  BeltCargo.hpp  Machine.hpp  NetworkGraph.hpp  NetworkProcedural.hpp  Pipe.hpp  Simulation.hpp  Track.hpp  belt.h  belt_cargo.h  item.h  machine.h  network_graph.h  network_procedural.h  pipe.h  simulation.h  track.h
src/tools/: civ_sim_main.cc  dds_bundler_main.cc  imported_scene_preview_main.cc  morrowind_balmora_cooker_main.cc  morrowind_balmora_interior_cache_main.cc  morrowind_exterior_cooker_main.cc  stellaris_sim_main.cc  strategy_map_gen_main.cc  svg_bundler_main.cc  theme_viewer_main.cc
src/ui/: animation.h  cached_rich_text.cc  cached_rich_text.h  font.cc  font.h  icon_atlas.cc  icon_atlas.h  odai_ui.h  resource_style.cc  resource_style.h  rich_text.cc  rich_text.h  signal.cc  signal.h  tooltip.cc  tooltip.h  ui_context.cc  ui_context.h  ui_cursor.cc  ui_cursor.h  ui_draw_list.cc  ui_draw_list.h  ui_input.h  ui_text_util.h  ui_types.h  widget.h  yield_style.h
src/world/: Chunk.hpp  ChunkGrid.hpp  ChunkMesher.cpp  ChunkMesher.hpp  ClipmapIndex.cpp  ClipmapIndex.hpp  Csg.hpp  MagicaVoxel.cpp  MagicaVoxel.hpp  SpatialIndex.cpp  SpatialIndex.hpp  Voxel.hpp  World.cpp  World.hpp  chunk.h  chunk_grid.h  chunk_grid_worldgen.cc  chunk_mesher.cc  chunk_mesher.h  clipmap_index.cc  clipmap_index.h  (+11 more)
tests/: FoundationTests.cpp  StabilityGTests.cpp  actor_ai_tests.cc  advisor_tests.cc  audio_tests.cc  city_script_tests.cc  content_tests.cc  economy_tests.cc  foundation_tests.cc  frame_graph_tests.cc  frame_math_tests.cc  frame_render_tests.cc  game_script_tests.cc  great_people_tests.cc  imported_scene_tests.cc  lua_hook_tests.cc  math_sampling_tests.cc  navmesh_tests.cc  procgen_tests.cc  retro_widgets_tests.cc  sim_network_tests.cc  stability_g_tests.cc  strategy_map_tests.cc  svg_vector_tests.cc  ui_tests.cc
(+334 files in other folders)
